--- a/walkthroughs/2-protecting-apps-sso/walkthrough.adoc
+++ b/walkthroughs/2-protecting-apps-sso/walkthrough.adoc
@@ -3,7 +3,6 @@
 
 // URLs
 :openshift-console-url: {openshift-host}
-:sso-realm-url: {user-sso-url}/auth/admin/{user-username}/console/index.html
 :sso-adapter-docs-url: https://access.redhat.com/documentation/en-us/red_hat_single_sign-on/{sso-version}/html/securing_applications_and_services_guide/index
 :sso-realm-url: {user-sso-url}/auth/admin/solution-patterns/console/index.html
 
@@ -19,6 +18,7 @@
 :realm-name: solution-patterns
 :realm-display-name: Solution Patterns
 :shared-realm-username: developer
+:realm-password: password
 :standard-fail-text: Verify that you followed all the steps. If you continue to have issues, contact your administrator.
 
 //id syntax is used here for the custom IDs because that is how the Solution Explorer sorts these within groups
@@ -79,7 +79,7 @@ IMPORTANT: The realm used in this Solution Pattern is shared with *all* users on
 Follow these steps to create a client.
 
 . Go to the link:{sso-realm-url}[{realm-display-name}, window="_blank"] realm, which is running on your {customer-sso-name} service.
-.. If prompted, enter the username `{shared-realm-username}` and password `password`.
+.. If prompted, enter the username `{shared-realm-username}` and password `{realm-password}`.
 . You will see the *{realm-name}* realm if the login is successful.
 . Select *Clients* from the vertical navigation menu on the left side of the screen.
 . Click the *Create* button on the top right of the Clients screen.
@@ -111,7 +111,7 @@ To secure your application with single sign-on and allow additional users to log
 Follow these steps to create a user.
 
 . Go to the link:{sso-realm-url}[{realm-display-name}, window="_blank"] realm, which is running on your {customer-sso-name} service.
-.. If prompted, enter the username `{shared-realm-username}` and password `password`.
+.. If prompted, enter the username `{shared-realm-username}` and password `{realm-password}`.
 . You will see the *{realm-name}* realm if the login is successful.
 . Select *Users* from the vertical navigation menu on the left side of the screen.
 . Click the *Add user* button on the top right of the Users screen.
@@ -161,7 +161,7 @@ demonstrate how to include a configuration and enable the adapter.
 
 
 . Go to link:{sso-realm-url}[SSO Realm, window="_blank"].
-. Enter the username `{shared-realm-username}` and password `password` if prompted.
+. Enter the username `{shared-realm-username}` and password `{realm-password}` if prompted.
 . Select *Clients* from the side menu.
 . Click the `{client-name}` client that was created earlier.
 . Choose the *Installation* tab.
